added delete method to controller